# Ovobose

./: CMakeLists.txt  Calibration.cpp  Calibration.h  Makefile  PostProcessor.cpp  PostProcessor.h  README.md  Scan.cpp  Scan.h  cal_param.xml  calibration  calibration.cpp  main.cpp  main2.cpp  param.xml  scan.cpp  scan.param  scan_param.txt  see.cpp
data/: ball_PP.pcd  ball_PP.ply  baseBall_PP.pcd  bouddha.vtk  bouddha_PP.pcd  bouddha_PP.ply  bouddha_PP.xyz  out.gp  outBougie.gp  outStatue.gp  out_PP.gp  sphere_20k.xyzmesh.stl  test.pcd  test_PP.pcd
docs/: cv_compatible.h
param/: cal_param.txt  postProcess_param.txt  scan_param.txt  surf_param.txt
src/: Calibration.cpp  Calibration.h  CloudProcessor.cpp  CloudProcessor.h  DataConverter.cpp  DataConverter.h  DataHandler.cpp  DataHandler.h  MeshConstructor.cpp  MeshConstructor.h  MeshMaker.cpp  MeshMaker.h  PostProcessor.cpp  PostProcessor.h  Scan.cpp  Scan.h  main_scan.cpp  main_surfaceReconstruction.cpp  types.h
src/gui/: MainWin.cpp  MainWin.h  QOpenCVWidget.cpp  QOpenCVWidget.h  main_gui.cpp
src/postProcess/: main_postProcess.cpp
src/scan/: main_scan.cpp
src/see/: main_see.cpp
src/surfaceReconstruction/: main_surfaceReconstruction.cpp
